# search_engine

./: CMakeLists.txt  README.md  config.json  requests.json
include/: converterJSON.h  invertedIndex.h  searchServer.h
resourses/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  server_tests.cpp
